# netmaker-ansible-automation

./: .env.example  .gitignore  CLAUDE.md  README.md  ansible.cfg  galaxy.yml  justfile  pyproject.toml
.github/workflows/: publish-collection.yml
docs/: netmaker_management_module.md
examples/: create_network.yml  manage_devices.yml
playbooks/: create_network.yml  delete_device.yml  delete_network.yml  manage_devices.yml
plugins/modules/: netmaker_management.py
scripts/: bump-version.sh
