[project]
name = "netmaker-ansible"
version = "1.0.1"
description = "Ansible module for managing Netmaker networks"
requires-python = ">=3.8"
dependencies = [
    "ansible>=2.9",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "ansible-lint>=6.0.0",
    "yamllint>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["library"]

[tool.uv]
dev-dependencies = [
    "ansible-lint>=6.0.0",
    "yamllint>=1.26.0",
]
